tests/snapshots/run_wpt_conformance__coreml_abs_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
abs.https.any.js abs float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([59, 82, 33, 85, 102, 66, 83, 85, 143, 85, 177, 213, 221, 79, 84, 207, 199, 213, 195, 203, 15, 85, 199, 208, 162, 82, 58, 86, 82, 205, 160, 85, 149, 76, 34, 208, 134, 79, 163, 212, 250, 85, 157, 70, 210, 79, 167, 210]);
  }

  nodes {
    [absOutput] = abs(operand_0, label="");
  }

  outputs { absOutput; }
}
