tests/snapshots/run_wpt_conformance__coreml_abs_float16_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "abs.https.any.js",
    "abs float16 3D tensor",
    "coreml",
    "PASS",
)
