tests/snapshots/run_wpt_conformance__coreml_abs_float16_6D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
abs.https.any.js abs float16 6D tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Rank of the input, 'absInput' is 6, but it should be between 1 and 5

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    absInput: f16[2, 1, 4, 1, 3, 1];
  }

  nodes {
    [absOutput] = abs(absInput, label="");
  }

  outputs { absOutput; }
}
